# conductor-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  manifest  plugin.json  pyproject.toml  server.py
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude-plugin/: marketplace.json
.claude/skills/arena/: SKILL.md
.claude/skills/conductor/: SKILL.md
.claude/skills/conductor/references/: workflows.md
comparisons/chronovoyage-2026-01-26/: index.html
conductor/: __init__.py  core.py  protocol.py  server.py
conductor/cli/: __init__.py  _output.py  capture.py  config.py  context.py  focus.py  grid.py  hook.py  kill.py  layout.py  list.py  popup.py  resize.py  send.py  session.py  spawn.py  speak.py  split.py  watch.py  window.py  worker.py  zoom.py
docs/: docker-model-runner.md  tmux-api-reference.md
plugins/conductor/: run-server.sh
plugins/conductor/.claude-plugin/: plugin.json
plugins/conductor/hooks/: hooks.json  statusline-script.sh
plugins/conductor/hooks/scripts/: audio-announcer.sh  state-tracker.sh
plugins/conductor/skills/conductor/: SKILL.md
plugins/conductor/skills/help/: SKILL.md
reference/: audio-announcer.sh  state-tracker.sh  tmux-status-claude.sh  tmux.conf
skills/arena/: SKILL.md
tests/: test_surface_parity.py
tui/: .gitignore  CLAUDE.md  claude_state.go  config.go  go.mod  main.go  model.go  settings.go  settings_profiles_test.go  settings_voice_test.go  templates.go  test_create_session.go  test_template.go  tmux.go  types.go  update.go  update_keyboard.go  update_mouse.go  view.go
(+3 files in other folders)
